# workshop

./: .gitignore  Cargo.toml  README.md  WORKSHOP.md
.junie/: guidelines.md
room/agents/Boris/: persona.md
room/agents/Brett/: persona.md
room/agents/Carl/: persona.md
room/agents/Janice/: persona.md
room/agents/Sandy/: persona.md
room/agents/Tommy/: persona.md
room/organisation/SohoHouse/: description.md
room/workshops/: boowm.json  soho-ai.json
